# voicevox-cli

./: .coderabbit.yaml  .gitignore  .mcp.json  .users_cache.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  INSTRUCTIONS.md  LICENSE  README.md  VOICEVOX.md  build.rs  default.nix  flake.nix  open_jtalk.pc  release-please-config.json  renovate.json  rust-toolchain.toml
.claude/: settings.local.json
.gemini/: config.yaml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: auto-sync-develop-main.yml  branch-restrictions.yml  ci.yml  macos-ci.yml  release-please.yml  release.yml  update-flake.yml  validate-workflows.yml
docs/: mcp-usage.md
modeling/: ClientConnection.cfg  ClientConnection.tla  DaemonRequestHandling.cfg  DaemonRequestHandling.safety.cfg  DaemonRequestHandling.tla  DaemonRequestHandling_TTrace_1772410608.tla  DaemonStartup.cfg  DaemonStartup.safety.cfg  DaemonStartup.tla  DaemonStartup_TTrace_1772410611.tla  McpSynthesisPlayback.cfg  McpSynthesisPlayback.tla  McpSynthesisPlayback_TTrace_1772410606.tla  STATE_TRACEABILITY.md
modeling/cfg/: Client.connect.cfg  Daemon.startup.cfg  Dictionary.load.cfg  FirstStartup.cfg  IPC.progress.cfg  IPC.safety.cfg  MCPServer.connect.cfg  MCPServer.degraded.cfg  Playback.standard.cfg  README.md  Runtime.cfg  Say.daemon.cfg  Say.standard.cfg  Socket.bind.cfg  Synthesis.cancel-sources.cfg  Synthesis.full.cfg  Synthesis.invalid-target.cfg  Synthesis.normal.cfg  Synthesis.progress.cfg  Synthesis.retry-boundary.cfg  SynthesisParallel.progress.cfg  SynthesisParallel.safety.cfg  System.cfg  VoicevoxModel.standard.cfg
modeling/tla/: Client.tla  Daemon.tla  Dictionary.tla  FirstStartup.tla  IPC.tla  MCPServer.tla  Model.tla  ONNXRuntime.tla  Playback.tla  Runtime.tla  Say.tla  Socket.tla  StartupResources.tla  Synthesis.tla  SynthesisParallel.tla  System.tla  VoicevoxModel.tla
nix/: serena.nix
scripts/: ci.sh  voicevox-auto-setup.sh  voicevox-reset.sh  voicevox-setup-models.sh  voicevox-setup.sh
src/: config.rs  core.rs  core_speakers.rs  ipc.rs  lib.rs  lib_old.rs  main.rs  memory_pool.rs  paths.rs  setup.rs  voice.rs
src/app/: daemon_control.rs  inspect.rs  mcp_server.rs  mod.rs  output.rs  say.rs  synthesis_job.rs
src/bindings/: dynamic.rs  manual.rs  mod.rs
src/client/: audio.rs  daemon_client.rs  download.rs  download_install.rs  download_status.rs  download_update.rs  fd_receive.rs  input.rs  mod.rs
src/client/daemon_client/: error.rs  launcher.rs  mod.rs  policy.rs  rpc.rs  transport.rs
src/client/download/: install.rs  mod.rs
src/core/: mod.rs
src/daemon/: bootstrap.rs  fd_passing.rs  fd_server.rs  mod.rs  process.rs  server.rs  socket_probe.rs  start_process.rs  state.rs  streaming.rs
src/daemon/state/: catalog.rs  executor.rs  policy.rs  result.rs
src/domain/: daemon.rs  inspect.rs  mcp.rs  mod.rs  say_phase.rs  startup.rs  startup_phase.rs  text_to_speech.rs  voice.rs  voice_style_query.rs  workflow_state.rs
src/domain/synthesis/: executor.rs  limits.rs  mod.rs  phase.rs  service.rs  streaming.rs  text_splitter.rs  wav.rs
src/domain/text_to_speech/: params.rs
src/infrastructure/: core.rs  logging.rs  mcp_instructions.rs  memory.rs  mod.rs  onnxruntime.rs  openjtalk.rs  paths.rs  voicevox.rs
src/infrastructure/daemon/: bootstrap.rs  control.rs  mod.rs  process.rs  server.rs  start_process.rs  state.rs
src/infrastructure/daemon/client/: error.rs  launcher.rs  mod.rs  policy.rs  transport.rs
src/infrastructure/daemon/rpc/: error.rs  launcher.rs  mod.rs  transport.rs
src/infrastructure/daemon/state/: catalog.rs  executor.rs  policy.rs  result.rs
src/infrastructure/download/: cleanup.rs  install.rs  mod.rs  status.rs  update.rs
src/infrastructure/ipc/: limits.rs  mod.rs  protocol.rs
src/interface/: audio.rs  mod.rs  output.rs  playback.rs
src/interface/cli/: audio.rs  daemon_cli.rs  daemon_control.rs  daemon_error.rs  daemon_invocation.rs  inspect.rs  mod.rs  playback.rs  say.rs  streaming_synthesizer.rs  synthesis_backend.rs  synthesis_client.rs  synthesis_job.rs  voice_help.rs  voice_selector.rs
src/interface/cli/daemon_rpc/: error.rs  launcher.rs  mod.rs  rpc.rs  transport.rs
src/interface/cli/download/: mod.rs  setup.rs  status.rs  update.rs
src/interface/cli/synthesis/: daemon.rs  daemon_synthesis.rs  flow.rs  mod.rs  mode.rs  streaming.rs  streaming_synthesis.rs  synthesis_flow.rs  synthesis_mode.rs
src/interface/ipc/: mod.rs  protocol.rs
src/interface/mcp_server/: daemon_error.rs  list_voice_styles.rs  mod.rs  protocol.rs  requests.rs  server.rs  speech_synthesis_messages.rs  speech_synthesis_tool.rs  startup.rs  text_to_speech_usecase.rs  tool_execution.rs  tool_execution_tests.rs  tools.rs  tools_tests.rs  voice_style_tool.rs
src/interface/mcp_server/protocol/: mod.rs
src/interface/mcp_server/server/: mod.rs  runtime.rs  stdio.rs
src/interface/mcp_server/tools/: list.rs  list_voice_styles.rs  mod.rs  registry.rs  text_to_speech.rs  types.rs
src/interface/synthesis/: daemon.rs  flow.rs  mod.rs  mode.rs  streaming.rs
src/ipc/: mod.rs
src/mcp/: execution_runtime.rs  handlers.rs  list_voice_styles.rs  mod.rs  playback.rs  protocol.rs  requests.rs  server.rs  service.rs  tool_catalog.rs  tool_types.rs  tools.rs  tools_tests.rs  tts_execute.rs  tts_params.rs  types.rs  voice_style_query.rs
src/paths/: mod.rs
src/setup/: mod.rs
src/synthesis/: executor.rs  mod.rs  service.rs  streaming.rs  wav.rs
src/voice/: mod.rs
tests/: daemon_auto_start_test.rs
tests/integration/: README.md  mcp_protocol.rs  synthesis_modes.rs  verify_binaries.rs
tests/integration/common/: mod.rs
voicevox_core/c_api/include/: voicevox_core.h
voicevox_core/c_api/lib/: libvoicevox_core.dylib
voicevox_core/onnxruntime/: third-party-notices.html
